--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,23 +4,21 @@ title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
 
-<div style="padding-left: 3rem;">
+<div style="width: 100%; padding: 1rem; box-sizing: border-box;">
 
-<hr>
+  <hr>
 
-<div style="max-width: 1000px; margin: 0 auto; padding: 1rem;">
+  <h1>Principal Investigator</h1>
 
-  <table style="width: 100%; border: 1px solid #ccc; border-radius: 8px; padding: 1rem;">
+  <table style="width: 100%; border: 1px solid #ccc; border-radius: 8px; padding: 1rem; border-spacing: 0;">
     <tr>
-      <td style="width: 180px; vertical-align: top; padding: 1rem;">
+      <td style="width: 200px; vertical-align: top; padding: 1rem;">
         <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
       </td>
       <td style="vertical-align: top; padding: 1rem;">
-        <strong style="font-size: 1.2rem;">Dr. Frederic Rizk</strong><br>
+        <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
         Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
-        Director, CARISET Lab<br><br>
-
-        <ul style="margin-top: 0;">
+        <ul style="margin-top: 0; padding-left: 1.2rem;">
           <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
           <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
           <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
@@ -33,72 +31,49 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
     </tr>
   </table>
 
-</div>
+  <hr>
 
-<hr>
+  <h2>Postdoctoral Researcher</h2>
 
-<h2>Postdoctoral Researcher</h2>
+  <table style="width: 100%; border-spacing: 0;">
+    <tr>
+      <td style="width: 200px; vertical-align: top;">
+        <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
+      </td>
+      <td style="vertical-align: top; padding-left: 20px;">
+        <strong>[Full Name]</strong><br>
+        Postdoctoral Fellow, CARISET Lab<br><br>
+        [Enter a brief bio here.]
+      </td>
+    </tr>
+  </table>
 
-<table>
-  <tr>
-    <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
-    </td>
-    <td style="vertical-align: top; padding-left: 20px;">
-      <strong>[Full Name]</strong><br>
-      Postdoctoral Fellow, CARISET Lab<br><br>
-      [Enter a brief bio here.]
-    </td>
-  </tr>
-</table>
+  <hr>
 
-<hr>
+  <h2>Graduate Research Assistants</h2>
 
-<h2>Graduate Research Assistants</h2>
+  <table style="width: 100%; border-spacing: 0;">
+    <tr>
+      <td style="width: 200px; vertical-align: top;">
+        <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
+      </td>
+      <td style="vertical-align: top; padding-left: 20px;">
+        <strong>[Full Name]</strong><br>
+        M.S. Student, [Major]<br><br>
+        [Write a short bio here.]
+      </td>
+    </tr>
+  </table>
 
-<table>
-  <tr>
-    <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
-    </td>
-    <td style="vertical-align: top; padding-left: 20px;">
-      <strong>[Full Name]</strong><br>
-      M.S. Student, [Major]<br><br>
-      [Write a short bio here.]
-    </td>
-  </tr>
-</table>
+  <br>
 
-<br>
-
-<table>
-  <tr>
-    <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
-    </td>
-    <td style="vertical-align: top; padding-left: 20px;">
-      <strong>[Full Name]</strong><br>
-      M.S. Student, [Major]<br><br>
-      [Write a short bio here.]
-    </td>
-  </tr>
-</table>
-
-<hr>
-
-<h2>Undergraduate Researcher</h2>
-
-<table>
-  <tr>
-    <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
-    </td>
-    <td style="vertical-align: top; padding-left: 20px;">
-      <strong>[Full Name]</strong><br>
-      Undergraduate Student, [Major]<br><br>
-      [Write a short description.]
-    </td>
-  </tr>
-</table>
-
-</div>
+  <table style="width: 100%; border-spacing: 0;">
+    <tr>
+      <td style="width: 200px; vertical-align: top;">
+        <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
+      </td>
+      <td style="vertical-align: top; padding-left: 20px;">
+        <strong>[Full Name]</strong><br>
+        M.S. Student, [Major]<br><br>
+        [Write a short bio here.]
+      </
