--- a/_pages/people.html
+++ b/_pages/people.html
@@ -18,8 +18,8 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
       <td style="vertical-align: top; padding: 1rem;">
         <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
         Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
+        Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
         <ul style="margin-top: 0; padding-left: 1.2rem;">
-          <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
           <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
           <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
           <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
