--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,12 +4,6 @@ title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
 
----
-permalink: /pages/people/
-title: Meet Our Team – CARISET
-excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
----
-
 <div style="width: 100%; padding: 1rem; box-sizing: border-box;">
 
   <hr>
@@ -24,10 +18,9 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
       <td style="vertical-align: top; padding: 1rem; word-break: normal; white-space: normal;">
         <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
         Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
-        Director, CARISET Lab<br><br>
+        Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
 
         <ul style="margin-top: 0; padding-left: 1.2rem;">
-          <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
           <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
           <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
           <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
