--- a/_pages/people.html
+++ b/_pages/people.html
@@ -23,8 +23,8 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
         <ul style="margin-top: 0; padding-left: 1.2rem;">
           <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
           <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
-          <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
-          <li>Former Postdoc & Research Scientist – Informatics Research Institute</li>
+          <li>B.E., Computer and Communication Engineering – Notre Dame University | Summa Cum Laude</li>
+          <li>Former Postdoc and Research Scientist – Informatics Research Institute</li>
           <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
         </ul>
       </td>
