--- a/_pages/people.html
+++ b/_pages/people.html
@@ -10,91 +10,79 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
   <h1>Principal Investigator</h1>
 
-  <table style="width: 100%; border-spacing: 0; table-layout: fixed;">
-    <tr>
-      <td style="width: 220px; vertical-align: top; padding: 1rem;">
-        <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
-      </td>
-      <td style="vertical-align: top; padding: 1rem; word-break: normal; white-space: normal;">
-        <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
-        Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
-        Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
+  <div style="display: flex; gap: 2rem; align-items: flex-start; overflow-x: auto; padding: 1rem 0;">
+    <div style="flex: 0 0 220px;">
+      <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+    </div>
+    <div style="white-space: nowrap;">
+      <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
+      Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
+      Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
 
-        <ul style="margin-top: 0; padding-left: 1.2rem;">
-          <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
-          <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
-          <li>B.E., Computer and Communication Engineering – Notre Dame University | Summa Cum Laude</li>
-          <li>Former Postdoc and Research Scientist – Informatics Research Institute</li>
-          <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
-        </ul>
-      </td>
-    </tr>
-  </table>
+      <ul style="margin-top: 0.5rem; padding-left: 1.5rem;">
+        <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
+        <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
+        <li>B.E., Computer and Communication Engineering – Notre Dame University | Summa Cum Laude</li>
+        <li>Former Postdoc and Research Scientist – Informatics Research Institute</li>
+        <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
+      </ul>
+    </div>
+  </div>
 
   <hr>
 
   <h2>Postdoctoral Researcher</h2>
 
-  <table style="width: 100%; border-spacing: 0; table-layout: fixed;">
-    <tr>
-      <td style="width: 220px; vertical-align: top; padding: 1rem;">
-        <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
-      </td>
-      <td style="vertical-align: top; padding: 1rem;">
-        <strong>[Full Name]</strong><br>
-        Postdoctoral Fellow, CARISET Lab<br><br>
-        [Enter a brief bio here.]
-      </td>
-    </tr>
-  </table>
+  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+    <div style="flex: 0 0 220px;">
+      <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
+    </div>
+    <div style="white-space: nowrap;">
+      <strong>[Full Name]</strong><br>
+      Postdoctoral Fellow, CARISET Lab<br><br>
+      [Enter a brief bio here.]
+    </div>
+  </div>
 
   <hr>
 
   <h2>Graduate Research Assistants</h2>
 
-  <table style="width: 100%; border-spacing: 0; table-layout: fixed;">
-    <tr>
-      <td style="width: 220px; vertical-align: top; padding: 1rem;">
-        <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
-      </td>
-      <td style="vertical-align: top; padding: 1rem;">
-        <strong>[Full Name]</strong><br>
-        M.S. Student, [Major]<br><br>
-        [Write a short bio here.]
-      </td>
-    </tr>
-  </table>
+  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+    <div style="flex: 0 0 220px;">
+      <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
+    </div>
+    <div style="white-space: nowrap;">
+      <strong>[Full Name]</strong><br>
+      M.S. Student, [Major]<br><br>
+      [Write a short bio here.]
+    </div>
+  </div>
 
-  <br>
-
-  <table style="width: 100%; border-spacing: 0; table-layout: fixed;">
-    <tr>
-      <td style="width: 220px; vertical-align: top; padding: 1rem;">
-        <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
-      </td>
-      <td style="vertical-align: top; padding: 1rem;">
-        <strong>[Full Name]</strong><br>
-        M.S. Student, [Major]<br><br>
-        [Write a short bio here.]
-      </td>
-    </tr>
-  </table>
+  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+    <div style="flex: 0 0 220px;">
+      <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
+    </div>
+    <div style="white-space: nowrap;">
+      <strong>[Full Name]</strong><br>
+      M.S. Student, [Major]<br><br>
+      [Write a short bio here.]
+    </div>
+  </div>
 
   <hr>
 
   <h2>Undergraduate Researcher</h2>
 
-  <table style="width: 100%; border-spacing: 0; table-layout: fixed;">
-    <tr>
-      <td style="width: 220px; vertical-align: top; padding: 1rem;">
-        <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
-      </td>
-      <td style="vertical-align: top; padding: 1rem;">
-        <strong>[Full Name]</strong><br>
-        Undergraduate Student, [Major]<br><br>
-        [Write a short description.]
-      </td>
-    </tr>
-  </table>
+  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+    <div style="flex: 0 0 220px;">
+      <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
+    </div>
+    <div style="white-space: nowrap;">
+      <strong>[Full Name]</strong><br>
+      Undergraduate Student, [Major]<br><br>
+      [Write a short description.]
+    </div>
+  </div>
 
 </div>
