--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,17 +4,19 @@ title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
 
-<div style="width: 100%; padding: 1rem; box-sizing: border-box;">
+<div style="width: 100%; padding: 0; margin: 0; box-sizing: border-box;">
 
   <hr>
 
   <h1>Principal Investigator</h1>
 
-  <div style="display: flex; gap: 2rem; align-items: flex-start; overflow-x: auto; padding: 1rem 0;">
+  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
+
     <div style="flex: 0 0 220px;">
       <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </div>
-    <div style="white-space: nowrap;">
+
+    <div style="flex: 1;">
       <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
       Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
       Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
@@ -33,11 +35,13 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
   <h2>Postdoctoral Researcher</h2>
 
-  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
+
     <div style="flex: 0 0 220px;">
       <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
     </div>
-    <div style="white-space: nowrap;">
+
+    <div style="flex: 1;">
       <strong>[Full Name]</strong><br>
       Postdoctoral Fellow, CARISET Lab<br><br>
       [Enter a brief bio here.]
@@ -48,22 +52,22 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
   <h2>Graduate Research Assistants</h2>
 
-  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
     <div style="flex: 0 0 220px;">
       <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
     </div>
-    <div style="white-space: nowrap;">
+    <div style="flex: 1;">
       <strong>[Full Name]</strong><br>
       M.S. Student, [Major]<br><br>
       [Write a short bio here.]
     </div>
   </div>
 
-  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%; margin-top: 1rem;">
     <div style="flex: 0 0 220px;">
       <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
     </div>
-    <div style="white-space: nowrap;">
+    <div style="flex: 1;">
       <strong>[Full Name]</strong><br>
       M.S. Student, [Major]<br><br>
       [Write a short bio here.]
@@ -74,11 +78,13 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
   <h2>Undergraduate Researcher</h2>
 
-  <div style="display: flex; gap: 2rem; align-items: flex-start; padding: 1rem 0;">
+  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
+
     <div style="flex: 0 0 220px;">
       <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
     </div>
-    <div style="white-space: nowrap;">
+
+    <div style="flex: 1;">
       <strong>[Full Name]</strong><br>
       Undergraduate Student, [Major]<br><br>
       [Write a short description.]
