--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,91 +4,49 @@ title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
 
-<div style="width: 100%; padding: 0; margin: 0; box-sizing: border-box;">
+<!-- Override theme padding/margins for full-width layout -->
+<style>
+  body, .page, .wrapper, .container, main {
+    margin: 0 !important;
+    padding: 0 !important;
+    max-width: 100% !important;
+    width: 100% !important;
+    box-sizing: border-box;
+  }
+</style>
+
+<div style="width: 100%; padding: 0; box-sizing: border-box;">
 
   <hr>
 
   <h1>Principal Investigator</h1>
 
-  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
+  <table style="width: 100%; border-spacing: 0; border: none; table-layout: auto;">
+    <tr>
+      <td style="width: 220px; vertical-align: top; padding: 1rem;">
+        <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      </td>
+      <td style="vertical-align: top; padding: 1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+        <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
+        Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
+        Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
 
-    <div style="flex: 0 0 220px;">
-      <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
-    </div>
-
-    <div style="flex: 1;">
-      <strong style="font-size: 1.3rem;">Dr. Frederic Rizk</strong><br>
-      Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
-      Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)<br>
-
-      <ul style="margin-top: 0.5rem; padding-left: 1.5rem;">
-        <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
-        <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
-        <li>B.E., Computer and Communication Engineering – Notre Dame University | Summa Cum Laude</li>
-        <li>Former Postdoc and Research Scientist – Informatics Research Institute</li>
-        <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
-      </ul>
-    </div>
-  </div>
+        <ul style="margin-top: 0; padding-left: 1.2rem;">
+          <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
+          <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
+          <li>B.E., Computer and Communication Engineering – Notre Dame University | Summa Cum Laude</li>
+          <li>Former Postdoc and Research Scientist – Informatics Research Institute</li>
+          <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
 
   <hr>
 
   <h2>Postdoctoral Researcher</h2>
 
-  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
-
-    <div style="flex: 0 0 220px;">
-      <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
-    </div>
-
-    <div style="flex: 1;">
-      <strong>[Full Name]</strong><br>
-      Postdoctoral Fellow, CARISET Lab<br><br>
-      [Enter a brief bio here.]
-    </div>
-  </div>
-
-  <hr>
-
-  <h2>Graduate Research Assistants</h2>
-
-  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
-    <div style="flex: 0 0 220px;">
-      <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
-    </div>
-    <div style="flex: 1;">
-      <strong>[Full Name]</strong><br>
-      M.S. Student, [Major]<br><br>
-      [Write a short bio here.]
-    </div>
-  </div>
-
-  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%; margin-top: 1rem;">
-    <div style="flex: 0 0 220px;">
-      <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
-    </div>
-    <div style="flex: 1;">
-      <strong>[Full Name]</strong><br>
-      M.S. Student, [Major]<br><br>
-      [Write a short bio here.]
-    </div>
-  </div>
-
-  <hr>
-
-  <h2>Undergraduate Researcher</h2>
-
-  <div style="display: flex; align-items: flex-start; gap: 2rem; width: 100%;">
-
-    <div style="flex: 0 0 220px;">
-      <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
-    </div>
-
-    <div style="flex: 1;">
-      <strong>[Full Name]</strong><br>
-      Undergraduate Student, [Major]<br><br>
-      [Write a short description.]
-    </div>
-  </div>
-
-</div>
+  <table style="width: 100%; border-spacing: 0; border: none; table-layout: auto;">
+    <tr>
+      <td style="width: 220px; vertical-align: top; padding: 1rem;">
+        <img
